k8s/chat-server.yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
        - name: chat-server
          image: docker.io/kobe4cn/chat_server:latest
          imagePullPolicy: IfNotPresent
          command: ["/app/chat_server"]
          ports:
            - containerPort: 6688
          volumeMounts:
            - name: config
              mountPath: /app/app.yaml
              readOnly: true
              subPath: app.yaml
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: config
          configMap:
            name: chat-config
