k8s/service.yaml
#
apiVersion: v1
kind: Service
metadata:
  name: chat-server
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: chat-server
  ports:
    - protocol: TCP
      port: 6688
      targetPort: 6688
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-server
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: analytics-server
  ports:
    - protocol: TCP
      port: 6690
      targetPort: 6690
---
apiVersion: v1
kind: Service
metadata:
  name: bot-server
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: bot-server
  ports:
    - protocol: TCP
      port: 6689
      targetPort: 6689
---
apiVersion: v1
kind: Service
metadata:
  name: notify-server
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: notify-server
  ports:
    - protocol: TCP
      port: 6687
      targetPort: 6687
